--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .choice img {
-    width: 100px;
+    width: 100px; /* Adjust size as necessary */
     height: auto;
     margin-top: 40px;
 }
@@ -75,7 +75,8 @@ h1.extra {
 }
 #user-score, #computer-score {
     font-weight: bold;
-    color:greenyellow;
+    color:rgba(255, 255, 0, 0.801);
+    font-size: 1.5rem;
 }
 
 #game-winner {
@@ -95,22 +96,92 @@ h1.extra {
 }
 
 #reset-button {
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
+    width: 140px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #2EE59D;
     border: none;
-    border-radius: 5px;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
     cursor: pointer;
+    outline: none;
 }
 
 #reset-button:hover {
-    background-color: #0056b3;
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-2px);
 }
 
 #game-winner {
-    /* Stil for vinnare text */
+    /* Your styles for the game winner text */
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 10px; /* Adjust as needed */
 }
 
+#playerNameDisplay {
+    font-size: 2rem;
+    color: rgba(255, 255, 255, 0.329);
+    border: none;
+    text-shadow:
+    0 0 2px #fff,
+    0 0 2px #fff,
+    0 0 5px #fff,
+    0 0 22px black,
+    0 0 42px black,
+    0 0 52px black,
+    0 0 502px black,
+    0 0 101px black; 
+}
 
+#submitNameButton {
+    padding: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 8px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    background-color: #2EE59D;
+  }
+  #submitNameButton:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 5px;
+     background-color: #4dccc6;
+  background-image: linear-gradient(315deg, #4dccc6 0%, #96e4df 74%);
+    box-shadow:
+     -7px -7px 20px 0px #fff9,
+     -4px -4px 5px 0px #fff9,
+     7px 7px 20px 0px #0002,
+     4px 4px 5px 0px #0001;
+    transition: all 0.3s ease;
+  }
+  #submitNameButton:hover {
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-1px);
+  }
+
+  #submitNameButton:active {
+    top: 2px;
+  }
